@@ -123,6 +123,12 @@ class Gravity_Flow_Common_Step_Settings {
 
 		$prefix = rgar( $config, 'name_prefix' );
 
+		$total_accounts = Gravity_Flow_Common::get_total_accounts();
+		$args           = Gravity_Flow_Common::get_users_args();
+		$number         = ( isset( $args['number'] ) && $args['number'] > 0 ) ? $args['number'] : 2000;
+		/* translators: 1: Warning icon 2: Number of users displayed 3: Open link tag 4: Close link tag */
+		$description = '<span class="gf_settings_description">' . sprintf( esc_html__( '%1$s The list of users contains only the first %2$s users in your site. %3$sLearn how to remove this limit%4$s. ', 'gravityflow' ), '<i class="dashicons dashicons-warning" style="color:red;"></i> ', $number, '<a href="https://docs.gravityflow.io/article/54-gravityflowgetusersargs" target="_blank">', '</a>' ) . '</span>';
+
 		return array(
 			array(
 				'name'          => $prefix . '_notification_type',
@@ -133,20 +139,22 @@ class Gravity_Flow_Common_Step_Settings {
 				'choices'       => $this->get_type_choices(),
 			),
 			array(
-				'id'       => $prefix . '_notification_users',
-				'name'     => $prefix . '_notification_users[]',
-				'label'    => __( 'Select', 'gravityflow' ),
-				'size'     => '8',
-				'multiple' => 'multiple',
-				'type'     => 'select',
-				'choices'  => $this->_account_choices,
+				'id'           => $prefix . '_notification_users',
+				'name'         => $prefix . '_notification_users[]',
+				'label'        => __( 'Select', 'gravityflow' ),
+				'size'         => '8',
+				'multiple'     => 'multiple',
+				'type'         => 'select',
+				'choices'      => $this->_account_choices,
+				'after_select' => ( $total_accounts > $number ) ? $description : '',
 			),
 			array(
-				'name'  => $prefix . '_notification_routing',
-				'label' => __( 'Routing', 'gravityflow' ),
-				'class' => 'large',
-				'type'  => 'user_routing',
-			)
+				'name'        => $prefix . '_notification_routing',
+				'label'       => __( 'Routing', 'gravityflow' ),
+				'class'       => 'large',
+				'type'        => 'user_routing',
+				'description' => ( $total_accounts > $number ) ? $description : '',
+			),
 		);
 	}
 
@@ -380,7 +388,7 @@ class Gravity_Flow_Common_Step_Settings {
 	 * @return array
 	 */
 	public function get_setting_assignees() {
-		return array(
+		$setting = array(
 			'id'       => 'assignees',
 			'name'     => 'assignees[]',
 			'tooltip'  => __( 'Users and roles fields will appear in this list. If the form contains any assignee fields they will also appear here. Click on an item to select it. The selected items will appear on the right. If you select a role then anybody from that role can approve.', 'gravityflow' ),
@@ -390,6 +398,16 @@ class Gravity_Flow_Common_Step_Settings {
 			'type'     => 'select',
 			'choices'  => $this->_account_choices,
 		);
+
+		$total_accounts = Gravity_Flow_Common::get_total_accounts();
+		$args           = Gravity_Flow_Common::get_users_args();
+		$number         = ( isset( $args['number'] ) && $args['number'] > 0 ) ? $args['number'] : 2000;
+		if ( $total_accounts > $number ) {
+			/* translators: 1: Warning icon 2: Number of users displayed 3: Open link tag 4: Close link tag */
+			$setting['description'] = sprintf( esc_html__( '%1$s The list of users contains only the first %2$s users in your site. %3$sLearn how to remove this limit%4$s. ', 'gravityflow' ), '<i class="dashicons dashicons-warning" style="color:red;"></i> ', $number, '<a href="https://docs.gravityflow.io/article/54-gravityflowgetusersargs" target="_blank">', '</a>' );
+		}
+
+		return $setting;
 	}
 
 	/**
@@ -400,12 +418,22 @@ class Gravity_Flow_Common_Step_Settings {
 	 * @return array
 	 */
 	public function get_setting_assignee_routing() {
-		return array(
+		$setting = array(
 			'name'    => 'routing',
 			'tooltip' => __( 'Build assignee routing rules by adding conditions. Users and roles fields will appear in the first drop-down field. If the form contains any assignee fields they will also appear here. Select the assignee and define the condition for that assignee. Add as many routing rules as you need.', 'gravityflow' ),
 			'label'   => __( 'Routing', 'gravityflow' ),
 			'type'    => 'routing',
 		);
+
+		$total_accounts = Gravity_Flow_Common::get_total_accounts();
+		$args           = Gravity_Flow_Common::get_users_args();
+		$number         = ( isset( $args['number'] ) && $args['number'] > 0 ) ? $args['number'] : 2000;
+		if ( $total_accounts > $number ) {
+			/* translators: 1: Warning icon 2: Number of users displayed 3: Open link tag 4: Close link tag */
+			$setting['description'] = sprintf( esc_html__( '%1$s The list of users contains only the first %2$s users in your site. %3$sLearn how to remove this limit%4$s. ', 'gravityflow' ), '<i class="dashicons dashicons-warning" style="color:red;"></i> ', $number, '<a href="https://docs.gravityflow.io/article/54-gravityflowgetusersargs" target="_blank">', '</a>' );
+		}
+
+		return $setting;
 	}
 
 	/**
